leo3/tests/ui/leanclass_unsupported_pattern.stderr
error: Only simple parameter patterns are supported
 --> tests/ui/leanclass_unsupported_pattern.rs:7:19
  |
7 |     fn bad(&self, (left, right): (u64, bool)) -> i32 {
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
